增加eclipse配置文件方便导入

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-.classpath
 .pmd
-.project
 .springBeans
 acerchem/acerchemcore/.settings
 *.class
 rebel.xml
+acerchem/acerchemstorefront/.settings
+acerchemrestfulapi/.settings
+acerchem/acercheminitialdata/.settings
+acerchem/acerchemfulfilmentprocess/.settings
+acerchem/acerchemfacades/.settings
