modify product detail file

--- a/acerchem/acerchemcockpits/platformhome.properties
+++ b/acerchem/acerchemcockpits/platformhome.properties
@@ -5,6 +5,6 @@
                 extname=acerchemcockpits
 
                 # path to the hybris platform installation directory
-                platformhome=/Users/luke/dev/hybris_server/hybris/bin/platform
+                platformhome=C:/train/HYBRISCOMM6400P_0-70002841/hybris/bin/platform
 
             
