--- a/acerchem/acerchemcockpits/build.xml
+++ b/acerchem/acerchemcockpits/build.xml
@@ -9,7 +9,7 @@
  Information and shall use it only in accordance with the terms of the
  license agreement you entered into with SAP.
 -->
-<project name="acerchemcockpits" default="all">
+<project name="acerchemfulfilmentprocess" default="all">
 	<property file="platformhome.properties" />
 
 	<!-- next line is only for eclipse to get rid of warnings -->
