--- a/acerchem/acerchemstorefront/.classpath
+++ b/acerchem/acerchemstorefront/.classpath
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="/platform"/>
+	<classpathentry exported="true" kind="src" path="/acceleratorstorefrontcommons"/>
+	<classpathentry exported="true" kind="src" path="/acerchemfacades"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/json-taglib-0.4.1.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/jsoup-1.6.1.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/jstl-impl-1.2.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/owasp-java-html-sanitizer-20160924.1.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/rhino-1.7R4.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/wro4j-core-1.7.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="resources"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/aliyun-sdk-oss-2.8.2.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/httpclient-4.4.1.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/httpcore-4.4.1.jar"/>
+	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/jdom-1.1.jar"/>
+	<classpathentry kind="src" output="eclipsebin/web/classes" path="web/src"/>
+	<classpathentry kind="src" output="eclipsebin/web/classes" path="web/testsrc"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
-
-	<classpathentry exported="false" kind="src" path="/platform" />
-	<classpathentry exported="true" kind="src" path="/acceleratorstorefrontcommons" />
-	<classpathentry exported="true" kind="src" path="/acerchemfacades" />
-	<classpathentry exported="false" kind="lib" path="web/webroot/WEB-INF/lib/json-taglib-0.4.1.jar" />
-	<classpathentry exported="false" kind="lib" path="web/webroot/WEB-INF/lib/jsoup-1.6.1.jar" />
-	<classpathentry exported="false" kind="lib" path="web/webroot/WEB-INF/lib/jstl-impl-1.2.jar" />
-	<classpathentry exported="false" kind="lib" path="web/webroot/WEB-INF/lib/owasp-java-html-sanitizer-20160924.1.jar" />
-	<classpathentry exported="false" kind="lib" path="web/webroot/WEB-INF/lib/rhino-1.7R4.jar" />
-	<classpathentry exported="false" kind="lib" path="web/webroot/WEB-INF/lib/wro4j-core-1.7.9.jar" />
-	<classpathentry exported="true" kind="lib" path="resources" />
-	<classpathentry exported="false" output="eclipsebin/web/classes" kind="src" path="web/src" />
-	<classpathentry exported="false" output="eclipsebin/web/classes" kind="src" path="web/testsrc" />
-				
 </classpath>
-				
