--- a/config/local.properties
+++ b/config/local.properties
@@ -39,3 +39,13 @@ db.tableprefix=
 #mysql.tabletype=InnoDB
 #mysql.allow.fractional.seconds=true
 #tenant.restart.on.connection.error=true
+
+web.baseurl=https://localhost:9002
+aliyun.endpoint=http://oss-us-east-1.aliyuncs.com
+aliyun.accessKeyId=LTAItFNuj9ju8BhI
+aliyun.accessKeySecret=GfyBU4iNfQftoUV20fHoYz2zNqJARy
+aliyun.bucketName=acerchem
+aliyun.preffixKey=application
+upload.path=E:/company/training/luke/HYBRISCOMM/hybris/data/media/sys_master/
+aliyun.key=<key>
+aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
