配置文件的阿里云root

--- a/config/local.properties
+++ b/config/local.properties
@@ -45,7 +45,8 @@ aliyun.endpoint=http://oss-us-east-1.aliyuncs.com
 aliyun.accessKeyId=LTAItFNuj9ju8BhI
 aliyun.accessKeySecret=GfyBU4iNfQftoUV20fHoYz2zNqJARy
 aliyun.bucketName=acerchem
-aliyun.preffixKey=application
+aliyun.preffixImageKey=image
+aliyun.preffixDocKey=doc
 upload.path=E:/company/training/luke/HYBRISCOMM/hybris/data/media/sys_master/
 aliyun.key=<key>
 aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
