--- a/acerchem/acerchemcore/.classpath
+++ b/acerchem/acerchemcore/.classpath
@@ -15,5 +15,5 @@
 	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
-	<classpathentry kind="output" path="eclipsebin/notused"/>
+	<classpathentry kind="output" path="notused"/>
 </classpath>
