--- a/acerchem/acerchemstorefront/project.properties
+++ b/acerchem/acerchemstorefront/project.properties
@@ -346,6 +346,8 @@ refresh.uploading.saved.cart.interval=5000
 # number of comments to show initially (integer)
 quote.pagination.numberofcomments=4
 
-basket.error.warehouse.different.name =\u5f53\u524d\u5546\u54c1\u4e0e\u8d2d\u7269\u8f66\u5185\u5546\u54c1\u7684\u4ed3\u5e93\u4e0d\u4e00\u81f4
+basket.error.storeId.empty.name = \u56fd\u5bb6\u9009\u62e9\u4e0d\u80fd\u4e3a\u7a7a
+
+basket.error.storeId.different.name =\u5f53\u524d\u5546\u54c1\u4e0e\u8d2d\u7269\u8f66\u5185\u5546\u54c1\u7684\u53d1\u8d27\u56fd\u5bb6\u4e0d\u540c
 
 basket.error.product.stock.different.name =\u5f53\u524d\u5546\u54c1\u4e0e\u8d2d\u7269\u8f66\u5185\u5546\u54c1\u5e93\u5b58\u7c7b\u578b\u4e0d\u4e00\u81f4
