--- a/config/local.properties
+++ b/config/local.properties
@@ -40,15 +40,24 @@ db.tableprefix=
 #mysql.allow.fractional.seconds=true
 #tenant.restart.on.connection.error=true
 
-web.baseurl=https://localhost:9002
 aliyun.endpoint=http://oss-us-east-1.aliyuncs.com
 aliyun.accessKeyId=LTAItFNuj9ju8BhI
 aliyun.accessKeySecret=GfyBU4iNfQftoUV20fHoYz2zNqJARy
 aliyun.bucketName=acerchem
 aliyun.preffixImageKey=image
 aliyun.preffixDocKey=doc
-upload.path=E:/company/training/luke/HYBRISCOMM/hybris/data/media/sys_master/
 aliyun.key=<key>
 aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
 #aliyun.async=yes or aliyun.async=no
 aliyun.async=yes
+
+emailservice.send.enabled=true
+mail.from=itisuptome_v3@sina.com
+mail.smtp.server=smtp.sina.com
+mail.smtp.port=25
+mail.smtp.user=itisuptome_v3
+mail.smtp.password=gomyway
+mail.smtp.auth=true
+mail.debug=true
+
+
