修复邮件主数据问题

--- a/config/local.properties
+++ b/config/local.properties
@@ -52,12 +52,10 @@ aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
 aliyun.async=yes
 
 emailservice.send.enabled=true
-mail.from=itisuptome_v3@sina.com
-mail.smtp.server=smtp.sina.com
+mail.from=customerservice@acerchem.com
+mail.smtp.server=smtp.exmail.qq.com
 mail.smtp.port=25
-mail.smtp.user=itisuptome_v3
-mail.smtp.password=gomyway
+mail.smtp.user=customerservice@acerchem.com
+mail.smtp.password=1qaz2wsX
 mail.smtp.auth=true
 mail.debug=true
-
-
