--- a/acerchem/acerchemstorefront/project.properties
+++ b/acerchem/acerchemstorefront/project.properties
@@ -100,12 +100,7 @@ storefrontContextRoot=/acerchemstorefront
 # For example you may setup a URL mapping as follows:
 # NOTE you should define your mapping in your config/local.properties rather
 # than here in the extension's properties file.
-website.apparel-uk.http=http://apparel-uk.local:9001/acerchemstorefront
-website.apparel-uk.https=https://apparel-uk.local:9002/acerchemstorefront
-website.apparel-de.http=http://apparel-de.local:9001/acerchemstorefront
-website.apparel-de.https=https://apparel-de.local:9002/acerchemstorefront
-website.electronics.http=http://electronics.local:9001/acerchemstorefront
-website.electronics.https=https://electronics.local:9002/acerchemstorefront
+website.acerchem.https=https://acerchem.local:9002/acerchemstorefront
 
 ###########
 # Qualified media URLs for each CMSWebSite used to load images and other media
