--- a/config/local.properties
+++ b/config/local.properties
@@ -59,3 +59,6 @@ mail.smtp.user=customerservice@acerchem.com
 mail.smtp.password=1qaz2wsX
 mail.smtp.auth=true
 mail.debug=true
+
+#website
+website.acerchem.https=https://acerchem.local:9002/acerchemstorefront
