--- a/acerchem/acerchemfulfilmentprocess/platformhome.properties
+++ b/acerchem/acerchemfulfilmentprocess/platformhome.properties
@@ -5,6 +5,6 @@
                 extname=acerchemfulfilmentprocess
 
                 # path to the hybris platform installation directory
-                platformhome=E:/hybris/hybris/bin/platform
+                platformhome=C:/train/HYBRISCOMM6400P_0-70002841/hybris/bin/platform
 
             
