--- a/config/local.properties
+++ b/config/local.properties
@@ -50,6 +50,10 @@ aliyun.key=<key>
 aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
 #aliyun.async=yes or aliyun.async=no
 aliyun.async=yes
+aliyun.isUpload=false
+aliyun.maxOfImage=10
+aliyun.maxOfDoc=10
+aliyun.isSynUploadDOC=false
 
 emailservice.send.enabled=true
 mail.from=customerservice@acerchem.com
