--- a/config/local.properties
+++ b/config/local.properties
@@ -46,11 +46,8 @@ aliyun.accessKeySecret=GfyBU4iNfQftoUV20fHoYz2zNqJARy
 aliyun.bucketName=acerchem
 aliyun.preffixImageKey=image
 aliyun.preffixDocKey=doc
-aliyun.key=<key>
 aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
-#aliyun.async=yes or aliyun.async=no
-aliyun.async=yes
-aliyun.isUpload=false
+aliyun.isNoUpload=false
 aliyun.maxOfImage=10
 aliyun.maxOfDoc=10
 aliyun.isSynUploadDOC=false
