--- a/config/local.properties
+++ b/config/local.properties
@@ -63,3 +63,6 @@ mail.debug=true
 
 #website
 website.acerchem.https=https://acerchem.local:9002/acerchemstorefront
+
+//取消订单、延迟收货时间的天数限制
+cancel.order.day=10
