--- a/config/local.properties
+++ b/config/local.properties
@@ -40,13 +40,13 @@ db.tableprefix=
 #mysql.allow.fractional.seconds=true
 #tenant.restart.on.connection.error=true
 
-aliyun.endpoint=http://oss-us-east-1.aliyuncs.com
-aliyun.accessKeyId=LTAItFNuj9ju8BhI
-aliyun.accessKeySecret=GfyBU4iNfQftoUV20fHoYz2zNqJARy
-aliyun.bucketName=acerchem
+aliyun.endpoint=https://oss-us-east-1.aliyuncs.com
+aliyun.accessKeyId=LTAIuleTEtEf4JnB
+aliyun.accessKeySecret=7WFdsSmV878UcAMUIlRfWF3RzJed2M
+aliyun.bucketName=acerchem-r
 aliyun.preffixImageKey=image
 aliyun.preffixDocKey=doc
-aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
+aliyun.domain=https://acerchem-r.oss-us-east-1.aliyuncs.com
 aliyun.isNoUpload=false
 aliyun.maxOfImage=10
 aliyun.maxOfDoc=10
