修改默认上传图片和资质文件

--- a/config/local.properties
+++ b/config/local.properties
@@ -59,7 +59,7 @@ aliyun.preffixImageKey=image
 aliyun.preffixDocKey=doc
 aliyun.domain=https://acerchem.oss-us-east-1.aliyuncs.com
 aliyun.async=yes
-aliyun.isNoUpload=true
+aliyun.isNoUpload=false
 aliyun.maxOfImage=10
 aliyun.maxOfDoc=10
 aliyun.isSynUploadDOC=false
