--- a/config/local.properties
+++ b/config/local.properties
@@ -74,6 +74,10 @@ mail.smtp.user=customerservice@acerchem.com
 mail.smtp.password=ShangHai1
 mail.smtp.auth=true
 mail.debug=true
+mail.ccAddress.one=Customerservice@ingredients4u.com
+mail.ccAddress.displayOneName=send to ccAddress one
+mail.ccAddress.two=Customerservice2@ingredients4u.com
+mail.ccAddress.displayTwoName=send to ccAddress two
 
 #website
 website.acerchem.https=https://acerchem.local:9002/acerchemstorefront
