增加uploadfile的配置

--- a/acerchem/acerchemstorefront/project.properties
+++ b/acerchem/acerchemstorefront/project.properties
@@ -340,3 +340,9 @@ refresh.uploading.saved.cart.interval=5000
 ##########
 # number of comments to show initially (integer)
 quote.pagination.numberofcomments=4
+
+#########
+# Defines maximum size in MB of the uploaded front-end file
+# Defines maximum count uploaded front-end files.
+uploaded.file.max.size=4
+uploaded.file.max.count=5
