添加标签名

--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
@@ -17,3 +17,6 @@
 # yourCustomLabel=value
 hmc.tab.ticket.information=Information
 hmc.tab.section.ticket.information=Information
+
+hmc.msg.poe.header.productCode=Product Code
+hmc.msg.poe.header.productName=Product Name
