#使用http #webservicescommons.required.channel=any

--- a/config/local.properties
+++ b/config/local.properties
@@ -65,6 +65,9 @@ aliyun.maxOfDoc=10
 aliyun.isSynUploadDOC=false
 
 
+#使用http
+#webservicescommons.required.channel=any
+
 
 emailservice.send.enabled=true
 mail.from=customerservice@acerchem.com
