fix首页显示图片

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@ acerchemrestfulapi/.settings
 acerchem/acercheminitialdata/.settings
 acerchem/acerchemfulfilmentprocess/.settings
 acerchem/acerchemfacades/.settings
+gensrc/
+*.iml
+commonwebsrc/
+build-tools/
+hybris-ems/
+hybris-Mobile-Apps-SDK/
+hybris/
+installer/
+licenses/
+classes/
+c4c-integration/
+.idea/
+hybris-sbg/
+jalo/
+platformhome.properties
+*-testclasses.xml
+*_bof.jar
