add quote function

--- a/acerchem/acerchemstorefront/project.properties
+++ b/acerchem/acerchemstorefront/project.properties
@@ -346,3 +346,4 @@ quote.pagination.numberofcomments=4
 # Defines maximum count uploaded front-end files.
 uploaded.file.max.size=4
 uploaded.file.max.count=5
+quote.request.initiation.threshold=0
