--- a/acerchem/acerchemcore/project.properties
+++ b/acerchem/acerchemcore/project.properties
@@ -37,3 +37,7 @@ solr.server.mode=standalone
 # This property is used to identify which quotes are going to expire soon
 quotetoexpiresoonjob.daystoexpire=3
 email.with.attachments.content.separation.flag=---------------content-------------
+
+email.sendcustomer.employee=true
+email.sendcustomer.first=true
+email.sendcustomer.once=true
