--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
@@ -22,3 +22,7 @@ hmc.msg.poe.header.productCode=Product Code
 hmc.msg.poe.header.productName=Product Name
 hmc.msg.poe.header.price=Unit Price
 hmc.msg.poe.header.package=Package
+com.acerchem.actions.EmployeeconfirmPay.missCustomerConfirm=Need user confirmation to pay first
+com.acerchem.actions.EmployeeconfirmPay.SUCCESS=Payment Confirmation Processing
+com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.MissConsignment=Please enter the shipment batch number first.
+com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery processing
