添加付款记录

--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
@@ -26,3 +26,5 @@ com.acerchem.actions.EmployeeconfirmPay.missCustomerConfirm=Need user confirmati
 com.acerchem.actions.EmployeeconfirmPay.SUCCESS=Payment Confirmation Processing
 com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.MissConsignment=Please enter the shipment batch number first.
 com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery processing
+com.acerchem.actions.order.auditing.OrderReceiptsCredit.MissCreditPoints=Please enter the amount of credit receipts
+com.acerchem.actions.order.auditing.OrderReceiptsCredit.Success=Order Receipts Processing
