邮箱密码修改

--- a/config/local.properties
+++ b/config/local.properties
@@ -74,7 +74,7 @@ mail.from=customerservice@acerchem.com
 mail.smtp.server=smtp.exmail.qq.com
 mail.smtp.port=25
 mail.smtp.user=customerservice@acerchem.com
-mail.smtp.password=Acer9752&
+mail.smtp.password=Acer%567
 mail.smtp.auth=true
 mail.debug=true
 mail.ccAddress.one=Customerservice@ingredients4u.com
