--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels.properties
@@ -28,3 +28,4 @@ com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.MissConsignment=Plea
 com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery processing
 com.acerchem.actions.order.auditing.OrderReceiptsCredit.MissCreditPoints=Please enter the amount of credit receipts
 com.acerchem.actions.order.auditing.OrderReceiptsCredit.Success=Order Receipts Processing
+com.acerchem.actions.order.entry.consignmentCredit.createNewConsignmentEntryQuantityFailure=Delivery quantity exceeds order quantity,please double check.
